tests/snapshots/machine_contract__machine_contract_backlinks.snap
---
source: tests/machine_contract.rs
assertion_line: 172
expression: normalize_for_snapshot(output)
---
{
  "command": "query.backlinks",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "note": ""
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
