tests/snapshots/machine_contract__machine_contract_bloat.snap
---
source: tests/machine_contract.rs
assertion_line: 279
expression: normalize_for_snapshot(output)
---
{
  "command": "analyze.bloat",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "limit": 10,
    "threshold": 50000
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
