tests/snapshots/machine_contract__machine_contract_broken_links.snap
---
source: tests/machine_contract.rs
assertion_line: 339
expression: normalize_for_snapshot(output)
---
{
  "command": "diagnose.broken-links",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {},
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
