tests/snapshots/machine_contract__machine_contract_orphans.snap
---
source: tests/machine_contract.rs
assertion_line: 321
expression: normalize_for_snapshot(output)
---
{
  "command": "diagnose.orphans",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "exclude_daily": false,
    "exclude_templates": false
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
