tests/snapshots/machine_contract__machine_contract_related.snap
---
source: tests/machine_contract.rs
assertion_line: 303
expression: normalize_for_snapshot(output)
---
{
  "command": "analyze.related",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "limit": 5,
    "note": "Home"
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
